--- a/WebTask/src/main/resources/application.properties
+++ b/WebTask/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-server.contextPath=/WebTask
-spring.datasource.url = jdbc:mysql://localhost:3308/webtask
-spring.datasource.username = root
-spring.datasource.password = 
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+spring.profiles.active= test
+
+server.contextPath= /WebTask
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
