--- a/WebTask/pom.xml
+++ b/WebTask/pom.xml
@@ -98,11 +98,11 @@
 			<!--<version>5.1.4</version>-->
 		<!--</dependency>-->
 		<!-- Spring security Test -->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.security</groupId>-->
-			<!--<artifactId>spring-security-test</artifactId>-->
-			<!--<version>4.0.4.RELEASE</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>4.0.4.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
