--- a/WebTask/src/main/resources/application-dev.properties
+++ b/WebTask/src/main/resources/application-dev.properties
@@ -1,7 +1,15 @@
-spring.datasource.url = jdbc:mysql://localhost:3308/webtask
+
+#    AT HOME
+#spring.datasource.url = jdbc:mysql://localhost:3308/webtask
+#spring.datasource.username = root
+#spring.datasource.password =
+
+#   AT WORK
+spring.datasource.url = jdbc:mysql://localhost:3306/webtask
+spring.datasource.username = user
+spring.datasource.password = user
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.username = root
-spring.datasource.password =
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
