--- a/WebTask/src/test/resources/application-test.properties
+++ b/WebTask/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
 spring.datasource.url = jdbc:h2:mem:test
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.platform = h2
+spring.jpa.hibernate.ddl-auto = create-drop
